StatsDirectUI/Expressions/StatsDirectExpressionParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4.1.9004
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4.1.9004 C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g 2012-05-08 08:59:34

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;
using ConditionalAttribute = System.Diagnostics.ConditionalAttribute;

namespace  StatsDirect.Expressions 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4.1.9004")]
[System.CLSCompliant(false)]
public partial class StatsDirectExpressionParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "AND", "B", "BACKSLASH", "C", "CARET", "COMMA", "D", "E", "EE", "EQ", "EXCLAIM", "EXPONENT", "F", "FALSE", "FLOAT", "G", "GE", "GETS", "GT", "H", "I", "IDENTIFIER", "INTEGER", "J", "K", "L", "LE", "LPAREN", "LR", "LT", "M", "MINUS", "MOD", "N", "NE", "NOT", "O", "OR", "P", "PI", "PLUS", "Q", "R", "RPAREN", "S", "SLASH", "STAR", "STARSTAR", "STRING", "T", "TRUE", "U", "V", "W", "WS", "X", "Y", "Z"
	};
	public const int EOF=-1;
	public const int A=4;
	public const int AND=5;
	public const int B=6;
	public const int BACKSLASH=7;
	public const int C=8;
	public const int CARET=9;
	public const int COMMA=10;
	public const int D=11;
	public const int E=12;
	public const int EE=13;
	public const int EQ=14;
	public const int EXCLAIM=15;
	public const int EXPONENT=16;
	public const int F=17;
	public const int FALSE=18;
	public const int FLOAT=19;
	public const int G=20;
	public const int GE=21;
	public const int GETS=22;
	public const int GT=23;
	public const int H=24;
	public const int I=25;
	public const int IDENTIFIER=26;
	public const int INTEGER=27;
	public const int J=28;
	public const int K=29;
	public const int L=30;
	public const int LE=31;
	public const int LPAREN=32;
	public const int LR=33;
	public const int LT=34;
	public const int M=35;
	public const int MINUS=36;
	public const int MOD=37;
	public const int N=38;
	public const int NE=39;
	public const int NOT=40;
	public const int O=41;
	public const int OR=42;
	public const int P=43;
	public const int PI=44;
	public const int PLUS=45;
	public const int Q=46;
	public const int R=47;
	public const int RPAREN=48;
	public const int S=49;
	public const int SLASH=50;
	public const int STAR=51;
	public const int STARSTAR=52;
	public const int STRING=53;
	public const int T=54;
	public const int TRUE=55;
	public const int U=56;
	public const int V=57;
	public const int W=58;
	public const int WS=59;
	public const int X=60;
	public const int Y=61;
	public const int Z=62;

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				false, false, false, false, false, false, false, false, false, false, 
				false, false, false, false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public StatsDirectExpressionParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public StatsDirectExpressionParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		OnCreated();
	}

	public override string[] TokenNames { get { return StatsDirectExpressionParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g"; } }


	[Conditional("ANTLR_TRACE")]
	protected virtual void OnCreated() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule(string ruleName, int ruleIndex) {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule(string ruleName, int ruleIndex) {}

	#region Rules

	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_start() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_start() {}
	// $ANTLR start "start"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:6:8: public start returns [string builtExpression] : ( EQ )? expr EOF ;
	[GrammarRule("start")]
	public string start()
	{
		EnterRule_start();
		EnterRule("start", 1);
		TraceIn("start", 1);
	    string builtExpression = default(string);


	    string expr1 = default(string);

		try { DebugEnterRule(GrammarFileName, "start");
		DebugLocation(6, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:7:2: ( ( EQ )? expr EOF )
			DebugEnterAlt(1);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:7:4: ( EQ )? expr EOF
			{
			DebugLocation(7, 4);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:7:4: ( EQ )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, decisionCanBacktrack[1]);
			int LA1_1 = input.LA(1);

			if ((LA1_1==EQ))
			{
				alt1 = 1;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:7:4: EQ
				{
				DebugLocation(7, 4);
				Match(input,EQ,Follow._EQ_in_start32); 

				}
				break;

			}
			} finally { DebugExitSubRule(1); }

			DebugLocation(7, 8);
			PushFollow(Follow._expr_in_start35);
			expr1=expr();
			PopFollow();

			DebugLocation(7, 13);
			Match(input,EOF,Follow._EOF_in_start37); 
			DebugLocation(7, 17);
			 builtExpression = expr1; 

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("start", 1);
			LeaveRule("start", 1);
			LeaveRule_start();
	    }
	 	DebugLocation(8, 1);
		} finally { DebugExitRule(GrammarFileName, "start"); }
		return builtExpression;

	}
	// $ANTLR end "start"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_expr() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_expr() {}
	// $ANTLR start "expr"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:10:1: expr returns [string builtExpression] : lhs= andexpr (op= OR rhs= andexpr )* ;
	[GrammarRule("expr")]
	private string expr()
	{
		EnterRule_expr();
		EnterRule("expr", 2);
		TraceIn("expr", 2);
	    string builtExpression = default(string);


	    IToken op = default(IToken);
	    string lhs = default(string);
	    string rhs = default(string);

		try { DebugEnterRule(GrammarFileName, "expr");
		DebugLocation(10, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:11:2: (lhs= andexpr (op= OR rhs= andexpr )* )
			DebugEnterAlt(1);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:11:4: lhs= andexpr (op= OR rhs= andexpr )*
			{
			DebugLocation(11, 7);
			PushFollow(Follow._andexpr_in_expr56);
			lhs=andexpr();
			PopFollow();

			DebugLocation(11, 16);
			 builtExpression = lhs; 
			DebugLocation(12, 3);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:12:3: (op= OR rhs= andexpr )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, decisionCanBacktrack[2]);
				int LA2_1 = input.LA(1);

				if ((LA2_1==OR))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:12:4: op= OR rhs= andexpr
					{
					DebugLocation(12, 6);
					op=(IToken)Match(input,OR,Follow._OR_in_expr65); 
					DebugLocation(12, 13);
					PushFollow(Follow._andexpr_in_expr69);
					rhs=andexpr();
					PopFollow();

					DebugLocation(12, 22);
					 builtExpression = "(" + builtExpression + " || " + rhs + ")"; 

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("expr", 2);
			LeaveRule("expr", 2);
			LeaveRule_expr();
	    }
	 	DebugLocation(13, 1);
		} finally { DebugExitRule(GrammarFileName, "expr"); }
		return builtExpression;

	}
	// $ANTLR end "expr"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_andexpr() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_andexpr() {}
	// $ANTLR start "andexpr"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:15:1: andexpr returns [string builtExpression] : lhs= notexpr (op= AND rhs= notexpr )* ;
	[GrammarRule("andexpr")]
	private string andexpr()
	{
		EnterRule_andexpr();
		EnterRule("andexpr", 3);
		TraceIn("andexpr", 3);
	    string builtExpression = default(string);


	    IToken op = default(IToken);
	    string lhs = default(string);
	    string rhs = default(string);

		try { DebugEnterRule(GrammarFileName, "andexpr");
		DebugLocation(15, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:16:2: (lhs= notexpr (op= AND rhs= notexpr )* )
			DebugEnterAlt(1);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:16:4: lhs= notexpr (op= AND rhs= notexpr )*
			{
			DebugLocation(16, 7);
			PushFollow(Follow._notexpr_in_andexpr91);
			lhs=notexpr();
			PopFollow();

			DebugLocation(16, 16);
			 builtExpression = lhs; 
			DebugLocation(17, 3);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:17:3: (op= AND rhs= notexpr )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, decisionCanBacktrack[3]);
				int LA3_1 = input.LA(1);

				if ((LA3_1==AND))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:17:4: op= AND rhs= notexpr
					{
					DebugLocation(17, 6);
					op=(IToken)Match(input,AND,Follow._AND_in_andexpr100); 
					DebugLocation(17, 14);
					PushFollow(Follow._notexpr_in_andexpr104);
					rhs=notexpr();
					PopFollow();

					DebugLocation(17, 23);
					 builtExpression = "(" + builtExpression + " && " + rhs + ")"; 

					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("andexpr", 3);
			LeaveRule("andexpr", 3);
			LeaveRule_andexpr();
	    }
	 	DebugLocation(18, 1);
		} finally { DebugExitRule(GrammarFileName, "andexpr"); }
		return builtExpression;

	}
	// $ANTLR end "andexpr"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_notexpr() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_notexpr() {}
	// $ANTLR start "notexpr"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:20:1: notexpr returns [string builtExpression] : ( ( NOT rhs= relexpr ) | relexpr );
	[GrammarRule("notexpr")]
	private string notexpr()
	{
		EnterRule_notexpr();
		EnterRule("notexpr", 4);
		TraceIn("notexpr", 4);
	    string builtExpression = default(string);


	    string rhs = default(string);
	    string relexpr2 = default(string);

		try { DebugEnterRule(GrammarFileName, "notexpr");
		DebugLocation(20, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:21:2: ( ( NOT rhs= relexpr ) | relexpr )
			int alt4=2;
			try { DebugEnterDecision(4, decisionCanBacktrack[4]);
			int LA4_1 = input.LA(1);

			if ((LA4_1==NOT))
			{
				alt4 = 1;
			}
			else if ((LA4_1==EE||(LA4_1>=FALSE && LA4_1<=FLOAT)||(LA4_1>=IDENTIFIER && LA4_1<=INTEGER)||(LA4_1>=LPAREN && LA4_1<=LR)||LA4_1==MINUS||LA4_1==PI||LA4_1==TRUE))
			{
				alt4 = 2;
			}
			else
			{
				NoViableAltException nvae = new NoViableAltException("", 4, 0, input, 1);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:21:4: ( NOT rhs= relexpr )
				{
				DebugLocation(21, 4);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:21:4: ( NOT rhs= relexpr )
				DebugEnterAlt(1);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:21:6: NOT rhs= relexpr
				{
				DebugLocation(21, 6);
				Match(input,NOT,Follow._NOT_in_notexpr126); 
				DebugLocation(21, 13);
				PushFollow(Follow._relexpr_in_notexpr130);
				rhs=relexpr();
				PopFollow();

				DebugLocation(21, 22);
				 builtExpression = "(!(" + rhs + "))"; 

				}


				}
				break;
			case 2:
				DebugEnterAlt(2);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:22:4: relexpr
				{
				DebugLocation(22, 4);
				PushFollow(Follow._relexpr_in_notexpr139);
				relexpr2=relexpr();
				PopFollow();

				DebugLocation(22, 12);
				 builtExpression = relexpr2; 

				}
				break;

			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("notexpr", 4);
			LeaveRule("notexpr", 4);
			LeaveRule_notexpr();
	    }
	 	DebugLocation(23, 1);
		} finally { DebugExitRule(GrammarFileName, "notexpr"); }
		return builtExpression;

	}
	// $ANTLR end "notexpr"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_relexpr() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_relexpr() {}
	// $ANTLR start "relexpr"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:25:1: relexpr returns [string builtExpression] : lhs= numexpr (op= relop rhs= numexpr )? ;
	[GrammarRule("relexpr")]
	private string relexpr()
	{
		EnterRule_relexpr();
		EnterRule("relexpr", 5);
		TraceIn("relexpr", 5);
	    string builtExpression = default(string);


	    string lhs = default(string);
	    string op = default(string);
	    string rhs = default(string);

		try { DebugEnterRule(GrammarFileName, "relexpr");
		DebugLocation(25, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:26:2: (lhs= numexpr (op= relop rhs= numexpr )? )
			DebugEnterAlt(1);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:26:4: lhs= numexpr (op= relop rhs= numexpr )?
			{
			DebugLocation(26, 7);
			PushFollow(Follow._numexpr_in_relexpr158);
			lhs=numexpr();
			PopFollow();

			DebugLocation(26, 16);
			 builtExpression = lhs; 
			DebugLocation(27, 3);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:27:3: (op= relop rhs= numexpr )?
			int alt5=2;
			try { DebugEnterSubRule(5);
			try { DebugEnterDecision(5, decisionCanBacktrack[5]);
			int LA5_1 = input.LA(1);

			if ((LA5_1==EQ||LA5_1==GE||LA5_1==GT||LA5_1==LE||LA5_1==LT||LA5_1==NE))
			{
				alt5 = 1;
			}
			} finally { DebugExitDecision(5); }
			switch (alt5)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:27:4: op= relop rhs= numexpr
				{
				DebugLocation(27, 6);
				PushFollow(Follow._relop_in_relexpr167);
				op=relop();
				PopFollow();

				DebugLocation(27, 16);
				PushFollow(Follow._numexpr_in_relexpr171);
				rhs=numexpr();
				PopFollow();

				DebugLocation(27, 25);
				 builtExpression = "(" + builtExpression + " " + op + " " + rhs + ")"; 

				}
				break;

			}
			} finally { DebugExitSubRule(5); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("relexpr", 5);
			LeaveRule("relexpr", 5);
			LeaveRule_relexpr();
	    }
	 	DebugLocation(28, 1);
		} finally { DebugExitRule(GrammarFileName, "relexpr"); }
		return builtExpression;

	}
	// $ANTLR end "relexpr"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_numexpr() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_numexpr() {}
	// $ANTLR start "numexpr"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:30:1: numexpr returns [string builtExpression] : lhs= mulexpr (op= addop rhs= mulexpr )* ;
	[GrammarRule("numexpr")]
	private string numexpr()
	{
		EnterRule_numexpr();
		EnterRule("numexpr", 6);
		TraceIn("numexpr", 6);
	    string builtExpression = default(string);


	    string lhs = default(string);
	    string op = default(string);
	    string rhs = default(string);

		try { DebugEnterRule(GrammarFileName, "numexpr");
		DebugLocation(30, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:31:2: (lhs= mulexpr (op= addop rhs= mulexpr )* )
			DebugEnterAlt(1);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:31:4: lhs= mulexpr (op= addop rhs= mulexpr )*
			{
			DebugLocation(31, 7);
			PushFollow(Follow._mulexpr_in_numexpr193);
			lhs=mulexpr();
			PopFollow();

			DebugLocation(31, 16);
			 builtExpression = lhs; 
			DebugLocation(32, 3);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:32:3: (op= addop rhs= mulexpr )*
			try { DebugEnterSubRule(6);
			while (true)
			{
				int alt6=2;
				try { DebugEnterDecision(6, decisionCanBacktrack[6]);
				int LA6_1 = input.LA(1);

				if ((LA6_1==MINUS||LA6_1==PLUS))
				{
					alt6 = 1;
				}


				} finally { DebugExitDecision(6); }
				switch ( alt6 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:32:4: op= addop rhs= mulexpr
					{
					DebugLocation(32, 6);
					PushFollow(Follow._addop_in_numexpr202);
					op=addop();
					PopFollow();

					DebugLocation(32, 16);
					PushFollow(Follow._mulexpr_in_numexpr206);
					rhs=mulexpr();
					PopFollow();

					DebugLocation(32, 25);
					 builtExpression = "(" + builtExpression + " " + op + " " + rhs + ")"; 

					}
					break;

				default:
					goto loop6;
				}
			}

			loop6:
				;

			} finally { DebugExitSubRule(6); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("numexpr", 6);
			LeaveRule("numexpr", 6);
			LeaveRule_numexpr();
	    }
	 	DebugLocation(33, 1);
		} finally { DebugExitRule(GrammarFileName, "numexpr"); }
		return builtExpression;

	}
	// $ANTLR end "numexpr"


	[Conditional("ANTLR_TRACE")]
	protected virtual void EnterRule_mulexpr() {}
	[Conditional("ANTLR_TRACE")]
	protected virtual void LeaveRule_mulexpr() {}
	// $ANTLR start "mulexpr"
	// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:35:1: mulexpr returns [string builtExpression] : lhs= powexpr (op= mulop rhs= powexpr )* ;
	[GrammarRule("mulexpr")]
	private string mulexpr()
	{
		EnterRule_mulexpr();
		EnterRule("mulexpr", 7);
		TraceIn("mulexpr", 7);
	    string builtExpression = default(string);


	    string lhs = default(string);
	    string op = default(string);
	    string rhs = default(string);

		try { DebugEnterRule(GrammarFileName, "mulexpr");
		DebugLocation(35, 1);
		try
		{
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:36:2: (lhs= powexpr (op= mulop rhs= powexpr )* )
			DebugEnterAlt(1);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:36:4: lhs= powexpr (op= mulop rhs= powexpr )*
			{
			DebugLocation(36, 7);
			PushFollow(Follow._powexpr_in_mulexpr229);
			lhs=powexpr();
			PopFollow();

			DebugLocation(36, 16);
			 builtExpression = lhs; 
			DebugLocation(37, 3);
			// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:37:3: (op= mulop rhs= powexpr )*
			try { DebugEnterSubRule(7);
			while (true)
			{
				int alt7=2;
				try { DebugEnterDecision(7, decisionCanBacktrack[7]);
				int LA7_1 = input.LA(1);

				if ((LA7_1==BACKSLASH||LA7_1==MOD||(LA7_1>=SLASH && LA7_1<=STAR)))
				{
					alt7 = 1;
				}


				} finally { DebugExitDecision(7); }
				switch ( alt7 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Sandbox\\StatsDirect\\StatsDirect3\\StatsDirectUI\\Expressions\\StatsDirectExpression.g:37:4: op= mulop rhs= powexpr
					{
					DebugLocation(37, 6);
					PushFollow(Follow._mulop_in_mulexpr238);
					op=mulop();
					PopFollow();

					DebugLocation(37, 16);
					PushFollow(Follow._powexpr_in_mulexpr242);
					rhs=powexpr();
					PopFollow();

					DebugLocation(37, 25);
